--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,60 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/wrapper">
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:background="#fcfcfc"-->
-    <!--android:orientation="vertical"-->
-    <!--android:weightSum="1">-->
-
-    <!--<ScrollView-->
-        <!--android:layout_width="fill_parent"-->
-        <!--android:layout_height="wrap_content" >-->
-
-        <!--<LinearLayout-->
-            <!--android:layout_width="fill_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:orientation="vertical" >-->
-
-            <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="43dp"-->
-                <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
-                <!--android:text=""-->
-                <!--android:id="@+id/user_name"-->
-                <!--android:layout_gravity="right" />-->
-
-            <!--<Button-->
-                <!--android:id="@+id/start"-->
-                <!--android:layout_width="fill_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="Start" />-->
-
-            <!--<Button-->
-                <!--android:id="@+id/stop"-->
-                <!--android:layout_width="fill_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="Stop" />-->
-
-            <!--<Button-->
-                <!--android:id="@+id/cancel"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="Cancel" />-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/volume"-->
-                <!--android:layout_width="fill_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:textColor="#000000" />-->
-
-        <!--</LinearLayout>-->
-    <!--</ScrollView>-->
-
 
     <FrameLayout
-        android:id="@+id/toolbar_list"
+        android:id="@+id/main_toolbar"
         android:background="@color/indigo"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_toolbar">
@@ -74,7 +23,7 @@
     </FrameLayout>
 
     <RelativeLayout
-        android:id="@+id/toolbar_song"
+        android:id="@+id/song_details_toolbar"
         android:background="@color/indigo"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -83,7 +32,7 @@
         android:visibility="invisible">
 
         <ImageView
-            android:id="@+id/toolbar_song_back"
+            android:id="@+id/song_details_back"
             android:layout_width="@dimen/height_toolbar"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
@@ -93,14 +42,8 @@
 
     </RelativeLayout>
 
-    <!--<Button-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Log in with spotify"-->
-        <!--android:id="@+id/login" />-->
-
     <LinearLayout
-        android:id="@+id/wrapper_song_details"
+        android:id="@+id/song_details"
         android:layout_marginTop="@dimen/height_song_picture_with_toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -126,7 +69,7 @@
             android:textColor="@color/gray"
             tools:text="Song"
             android:fontFamily="sans-serif-light"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:layout_margin="10dp" />
 
         <TextView
@@ -136,26 +79,8 @@
             android:textColor="@color/gray"
             tools:text="Song"
             android:fontFamily="sans-serif-light"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:layout_margin="10dp" />
-
-        <!--<ScrollView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_marginLeft="10dp"-->
-            <!--android:layout_marginRight="10dp"-->
-            <!--android:layout_marginBottom="10dp">-->
-
-            <!--<TextView-->
-                <!--android:id="@+id/text_view_profile_description"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:textColor="@color/gray"-->
-                <!--tools:text="@string/lorem_ipsum_long"-->
-                <!--android:fontFamily="sans-serif"-->
-                <!--android:textSize="18sp" />-->
-
-        <!--</ScrollView>-->
 
     </LinearLayout>
 
@@ -167,34 +92,28 @@
         android:layout_marginRight="15dp"
         android:visibility="invisible"
         android:layout_marginTop="@dimen/margin_top_button_message"
-        android:id="@+id/button_add" />
+        android:id="@+id/spotify_add" />
+
+    <com.earshot.project.main.views.Ripples
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/ripples" />
 
 
     <com.earshot.project.main.views.MicrophoneView
-        android:id="@+id/record"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:id="@+id/micButton"
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Login"
         android:id="@+id/loginButton"
-        android:layout_below="@+id/toolbar_list"
+        android:layout_below="@+id/main_toolbar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="93dp" />
 
 </RelativeLayout>
-<!--</LinearLayout>-->
-
-<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"-->
-    <!--android:layout_width="match_parent" android:layout_height="match_parent"-->
-    <!--tools:context=".MainActivity" tools:ignore="MergeRootFrame" >-->
-
-    <!--<fragment-->
-        <!--class="com.earshot.project.main.views.RecordControlFragment"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"/>-->
-
-<!--</FrameLayout>-->
