--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+
     </FrameLayout>
 
     <RelativeLayout
@@ -39,6 +40,18 @@
             android:layout_gravity="center"
             android:padding="15dp"
             android:src="@drawable/abc_ic_ab_back_mtrl_am_alpha" />
+
+        <ImageView
+            android:id="@+id/logout"
+            android:layout_width="@dimen/height_toolbar"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:padding="5dp"
+            android:src="@drawable/ic_highlight_remove_white_48dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:contentDescription="@string/logout" />
 
     </RelativeLayout>
 
@@ -106,14 +119,5 @@
         android:layout_height="128dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:id="@+id/loginButton"
-        android:layout_below="@+id/main_toolbar"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="93dp" />
 
 </RelativeLayout>
